[gd_scene load_steps=12 format=2]

[ext_resource path="res://Moose.png" type="Texture" id=1]
[ext_resource path="res://Moose.gd" type="Script" id=2]
[ext_resource path="res://Area of Effect.tscn" type="PackedScene" id=3]
[ext_resource path="res://AngryMoose.png" type="Texture" id=4]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Angry",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.08634
height = 2.43149

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 87.6123

[sub_resource type="CapsuleShape2D" id=5]

[node name="Moose" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Angry"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.307779, 10.4645 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.245401, -0.31373 )
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Area of Effect" parent="." instance=ExtResource( 3 )]
position = Vector2( -24.9586, 2.24939 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="Area of Effect" index="0"]
position = Vector2( 25.204, -2.56312 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.245401, -0.31373 )
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Area of Effect" to="." method="_on_Area_of_Effect_area_entered"]
[connection signal="area_exited" from="Area of Effect" to="." method="_on_Area_of_Effect_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox"]

[editable path="Area of Effect"]

[editable path="Hurtbox"]
